--- a/index.html
+++ b/index.html
@@ -150,8 +150,13 @@
         </section>
         <!-- sponsors section end -->
     </main>
-    <footer>
+    <!-- main section end  -->
 
+    <!-- footer start -->
+    <footer>
+        <div class="foot">
+            <h4>All rights reserved copyright@2023 startup landing page design</h4>
+        </div>
     </footer>
 </body>
 
